sumo/tests/sumo/errors/meandata/meandata_edges_false_order/errors.sumo
Error: The dump-begin at position 2 is not smaller than the according dump-end.
Quitting (on error).
